--- a/unique_oligos_virtual_circular_genome.ipynb
+++ b/unique_oligos_virtual_circular_genome.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 402,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 331,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 332,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 333,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 334,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 335,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 336,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 351,
+   "execution_count": 39,
    "metadata": {
     "scrolled": true
    },
@@ -164,10 +164,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Genome strand: \t\tAAA\n",
-      "Complementary strand: \tUUU\n",
-      "Unique oligos: \t\t{'UU', 'UUU', 'AAA', 'AA'}\n",
-      "# of unique oligos: \t4\n"
+      "Genome strand: \t\tAUA\n",
+      "Complementary strand: \tUAU\n",
+      "Unique oligos: \t\t{'UU', 'UA', 'UUA', 'AUA', 'AAU', 'AA', 'UAU', 'UAA', 'AU', 'AUU'}\n",
+      "# of unique oligos: \t10\n"
      ]
     }
    ],
